--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "alcoholadvise",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,9 +8,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "pg": "^7.8.1",
     "sequelize": "^4.42.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/williamsuryawan/alcohol.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/williamsuryawan/alcohol/issues"
+  },
+  "homepage": "https://github.com/williamsuryawan/alcohol#readme",
+  "description": ""
 }
